add relay api
